--- a/TimeoutCorner/UserSettings/Search.settings
+++ b/TimeoutCorner/UserSettings/Search.settings
@@ -10,7 +10,7 @@ showStatusBar = false
 scopes = {
 	"last_search.3BE40471" = ""
 	"OpenInspectorPreview.3BE40471" = "0"
-	"currentGroup.3BE40471" = "scene"
+	"currentGroup.3BE40471" = "all"
 }
 providers = {
 	packages = {
